# Observationalseismology

./: .gitignore  README.md  environment-linux.yml  environment-windows.yml  lecture_00.ipynb  lecture_01_git.ipynb  lecture_04_relational-operators_if-elif-else.ipynb  lecture_06_container.ipynb  setup.ipynb
2023/: pyproject.toml
2023/05_Permafrost/: 05_practical_permafrost.ipynb  BW_ZUGS_BW_ZUGS-EN-m15-f1.csv  BW_ZUGS_BW_ZUGS-EZ-m15-f1.csv  BW_ZUGS_BW_ZUGS-NZ-m15-f1.csv  temp_1m_depth.csv
2023/06_Car_tracking/CarTracking/: 6C-CarTracking.ipynb
2023/06_Car_tracking/CarTracking_Baz/: 6C-CarTracking.ipynb
2024/: pyproject.toml
2024/07_AdvancedTools/: 00 Export Labelled Events.ipynb  01 Check Events.ipynb  02 Similarity Check.ipynb  03 Extract Features.ipynb  04 Random Forest Classifier.ipynb  05 Detect Events on Merapi.ipynb  07 CovSeisNet - PdF.ipynb  ComputeAttributesV_MAT.py  random_forest.joblib
2024/07_AdvancedTools/XM_trigger/: XM_log.txt  XM_trigger.txt
2024/07_AdvancedTools/attributes/GRW0.BHZ/: MP.npy  ND.npy  NN.npy  VTB.npy  gugu_long.npy  gugu_short.npy  unknown.npy
2024/07_AdvancedTools/events/MP/: 00.mseed  01.mseed  02.mseed  03.mseed  04.mseed  05.mseed  06.mseed  07.mseed  08.mseed  09.mseed  10.mseed  11.mseed  12.mseed  13.mseed  14.mseed  15.mseed  16.mseed  17.mseed  18.mseed  19.mseed  20.mseed  21.mseed  22.mseed
2024/07_AdvancedTools/events/ND/: 00.mseed  01.mseed  02.mseed  03.mseed  04.mseed  05.mseed  06.mseed  07.mseed  (+11 more)
2024/09_Source_Tracking/: 6C_TrackS.ipynb  Compute_ADR.ipynb
2026/: pyproject.toml
2026/02 Noise - HVSR - CCF/: 00 - Time series exploration.ipynb  01 - Noise statistics - i95 and friends.ipynb  10 - Power Spectral Density - PPSD.ipynb  11 - PSD to RMS advanced plots.ipynb  20 - HVSRpy_dataprocessing-single station.ipynb  21 - HVSRpy_dataprocessing_hourly.ipynb  22 - HVSRpy_dataviewing.ipynb  Grenzgletscher_temperatures_lower.csv  Grenzgletscher_temperatures_upper.csv  HVSR_minionology.py  XG.BB01..HHZ.npz  db.ini  db.sqlite  i95_and_friends_stats_BB01.csv  seismosocialdistancing.py  seismosocialdistancing_simple.py
2026/03 Seismology on frozen lakes/: 01_LakeIce_Wavefield.ipynb  02_LakeIce_Seismoacoustics.ipynb  03_LakeIce_IceProperties.ipynb  LakeIceExample_CW_EIS10_E.mseed  LakeIceExample_CW_EIS10_Microphone.mseed  LakeIceExample_CW_EIS10_N.mseed  LakeIceExample_CW_EIS10_Z.mseed  compute_qs_dispersion.py
(+73 files in other folders)
