[project]
name = "skience2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cmasher>=1.9.2",
    "disba>=0.7.0",
    "h5py>=3.16.0",
    "hvsrpy>=2.1.0",
    "ipympl>=0.10.0",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "llvmlite>=0.46.0",
    "mplcursors>=0.7",
    "msnoise==1.6",
    "netcdf4>=1.7.4",
    "nonlinlocpy>=0.0.2",
    "numba>=0.64.0",
    "obspy>=1.5.0",
    "pandas>=3.0.1",
    "pygmt>=0.18.0",
    "pyproj>=3.7.2",
    "pytest>=9.0.2",
    "pytest-json-report>=1.5.0",
    "pytz>=2026.1.post1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "seissrcinv>=0.0.8",
    "sqlalchemy<2",
    "sqlalchemy-utils>=0.42.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "xarray>=2026.2.0",
    "xdas>=0.2.5",
]

[tool.uv.sources]
msnoise = { git = "https://github.com/ROBelgium/MSNoise.git", rev = "pre-alec-version" }
